<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AppTheme.background"
    android:padding="20dp">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">

            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/weight"/>

            <EditText
                android:id="@+id/weight_et"
                style="@style/AppTheme.editText.parameters"
                android:inputType="numberDecimal"
                android:textColor="@android:color/black"
                android:enabled="false"
                />
            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/weight"
                android:visibility="invisible"/>
            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/weight"
                android:visibility="invisible"/>

            </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">

            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/unit_text"
                android:layout_marginLeft="0dp"
                android:id="@+id/patient_id"
                android:layout_weight=".8"
                android:gravity="center_horizontal" />

            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/dose_text"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/drug_amount_text"
                android:id="@+id/textView3"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/saline_text"
                android:id="@+id/textView4"
                android:layout_weight="1"
                android:gravity="center_horizontal" />

            <TextView
                style="@style/AppTheme.textView"
                android:text="@string/dial_text"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


            <Spinner
                android:layout_width="match_parent"
                style="@style/AppTheme.spinner.parameters"
                android:id="@+id/unit_spinner_1"
                android:layout_weight=".8"
                android:gravity="center_horizontal" />

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"

                android:id="@+id/dose_et_1"/>

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/drug_amount_1_et" />

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/saline_1_et"/>

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/dial_et_1"
                android:textColor="@android:color/black"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


            <Spinner
                android:layout_width="match_parent"
                style="@style/AppTheme.spinner.parameters"
                android:id="@+id/unit_spinner_2"
                android:layout_weight=".8"
                android:gravity="center_horizontal" />

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/dose_et_2" />

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/drug_amount_2_et" />

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/saline_2_et" />

            <EditText
                style="@style/AppTheme.editText.parameters.dial_dose"
                android:id="@+id/dial_et_2"
                android:enabled="false"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


        <Spinner
            android:layout_width="match_parent"
            style="@style/AppTheme.spinner.parameters"
            android:id="@+id/unit_spinner_3"
            android:layout_weight=".8"
            android:gravity="center_horizontal" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dose_et_3" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/drug_amount_3_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/saline_3_et"/>

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dial_et_3"
            android:enabled="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


        <Spinner
            android:layout_width="match_parent"
            style="@style/AppTheme.spinner.parameters"
            android:id="@+id/unit_spinner_4"
            android:layout_weight=".8"
            android:gravity="center_horizontal" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dose_et_4" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/drug_amount_4_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/saline_4_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dial_et_4"
            android:enabled="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/unit_spinner_5"
            android:layout_weight=".8"
            style="@style/AppTheme.spinner.parameters"
            android:gravity="center_horizontal" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dose_et_5"/>

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/drug_amount_5_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/saline_5_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dial_et_5"
            android:enabled="false"
            android:textColor="@android:color/black" />
    </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


        <Spinner
            android:layout_width="match_parent"
            android:id="@+id/unit_spinner_6"
            android:layout_weight=".8"
            style="@style/AppTheme.spinner.parameters"
            android:gravity="center_horizontal" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dose_et_6" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/drug_amount_6_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/saline_6_et" />

        <EditText
            style="@style/AppTheme.editText.parameters.dial_dose"
            android:id="@+id/dial_et_6"
            android:textColor="@android:color/black"
            android:enabled="false" />
    </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


            <TextView
                style="@style/AppTheme.textView"
                android:text="Total Dial:" />

            <EditText
                android:id="@+id/total_dial"
                android:editable="false"
                android:maxLength="7"
                style="@style/AppTheme.editText.parameters.dial_dose" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


            <TextView
                style="@style/AppTheme.textView"
                android:text="NG/O Amount:" />

            <EditText
                android:id="@+id/ngo_amount"
                android:maxLength="7"
                style="@style/AppTheme.editText.parameters.dial_dose" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


            <TextView
                style="@style/AppTheme.textView"
                android:text="Total Intale:" />

            <EditText
                android:id="@+id/total_intale"
                android:editable="false"
                android:maxLength="7"
                style="@style/AppTheme.editText.parameters.dial_dose" />
        </LinearLayout>

        <LinearLayout
            style="@style/AppTheme.ParameterLinearLayout">


            <TextView
                style="@style/AppTheme.textView"
                android:text="Total Balance:" />

            <EditText
                android:id="@+id/total_balance"
                android:editable="false"
                android:maxLength="7"
                style="@style/AppTheme.editText.parameters.dial_dose" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
